# advanced-deer-flow

./: ADVANCED_README.md
recursive_ai/: README.md  pyproject.toml
recursive_ai/db/: chroma.sqlite3
recursive_ai/recursive_ai/: __main__.py  graph.py  main.py
recursive_ai/recursive_ai/agents/: acquisition.py  evolution.py  reflector.py  scientist.py
recursive_ai/recursive_ai/core/: meta.py  planner.py  protocol.py  resources.py  simulation.py  swarm.py
recursive_ai/recursive_ai/learning/: dataset.py
recursive_ai/recursive_ai/memory/: long_term.py  skills.py
recursive_ai/tests/: test_graph.py  test_learning.py  test_scientist.py  test_simulation.py
